# aistats-22-calm

./: README.md  pyproject.toml
dd/: base.py  batchmmd.py  bstat.py  kernels.py  loaders.py  lsddinc.py  projections.py  utils.py
experiments/camelyon/: config.yaml  run.py  single_run.py  stream.py
experiments/figure_1/: fig_1_plot.py
experiments/toy_examples/: .gitignore  data_config.yaml  detector_config.yaml  gen_config.yaml  loaders.py  run.py  single_run.py  stream.py
experiments/ws_bias/: .gitignore  config.yaml  distance.py  run.py
